--- a/src/Pages/style.scss
+++ b/src/Pages/style.scss
@@ -1,3 +1,13 @@
 .container {
   display: flex;
+  flex-direction: column;
+  height: 100vh;
+  width: 100vw;
+  font-family: Arial, Helvetica, sans-serif;
+  align-items: center;
+  justify-content: center;
+
+  .title {
+    font-size: 5rem;
+  }
 }
