--- a/src/components/DadtiniGenerator/style.scss
+++ b/src/components/DadtiniGenerator/style.scss
@@ -1,4 +1,5 @@
-$color-shadow: #444;
+$color-shadow: #222;
+$color-button: #1515fa;
 
 .dadtini-generator {
   text-align: center;
@@ -7,9 +8,11 @@ $color-shadow: #444;
     cursor: pointer;
     font-size: 1.5rem;
     border: none;
-    border-radius: 4px;
+    border-radius: 9px;
     padding: .5rem 1.5rem;
-    box-shadow: 0 0 5px $color-shadow;
+    color: white;
+    box-shadow: 0 0 7px $color-shadow;
+    background-color: $color-button;
 
     &:hover {
       box-shadow: 0 0 1px $color-shadow;
