--- a/src/Pages/style.scss
+++ b/src/Pages/style.scss
@@ -10,8 +10,9 @@ body, html {
   height: 100vh;
   width: 100vw;
   font-family: Arial, Helvetica, sans-serif;
-  align-items: center;
+  align-items: stretch;
   justify-content: center;
+  text-align: center;
 
   .title {
     font-size: 5rem;
