--- a/src/components/DadtiniGenerator/style.scss
+++ b/src/components/DadtiniGenerator/style.scss
@@ -33,6 +33,8 @@ $color-button: #1515fa;
   display: flex;
   align-items: center;
   justify-content: center;
+  animation-name: fadeIn;
+  animation-duration: .5s;
 
   &__image-container {
     position: absolute;
@@ -77,6 +79,8 @@ $color-button: #1515fa;
   }
 
   &__description {
+    animation-name: fadeIn;
+    animation-duration: .75s;
     background-color: rgba(200,200,200,.8);
     z-index: 10;
     padding: 2rem;
