added dark n stormy and fixed array length bug

--- a/src/components/DadtiniGenerator/style.scss
+++ b/src/components/DadtiniGenerator/style.scss
@@ -33,7 +33,7 @@ $color-button: #1515fa;
   margin: 0 auto;
   position: relative;
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
   animation-name: fadeIn;
   animation-duration: .5s;
@@ -75,6 +75,9 @@ $color-button: #1515fa;
       color: white;
       position: absolute;
       top: 4rem;
+      left: 50%;
+      margin-left: -200px;
+      width: 400px;
       opacity: 0;
       transition: all .75s;
 
