--- a/src/Pages/style.scss
+++ b/src/Pages/style.scss
@@ -20,3 +20,19 @@ body, html {
     margin: 0 0 1rem 0;
   }
 }
+
+.button {
+  cursor: pointer;
+  font-size: 1.25rem;
+  border: none;
+  border-radius: 9px;
+  padding: .5rem 1.5rem;
+  margin-bottom: 1rem;
+  color: white;
+  box-shadow: 0 0 7px #999;
+  background-color: gray;
+
+  &:hover {
+    box-shadow: 0 0 1px #999;
+  }
+}
