--- a/src/Pages/style.scss
+++ b/src/Pages/style.scss
@@ -36,3 +36,21 @@ body, html {
     box-shadow: 0 0 1px #999;
   }
 }
+
+.nav {
+  ul {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    li {
+      list-style: none;
+
+      a {
+        padding: .5rem 1rem;
+      }
+    }
+  }
+}
